manifests/kiwix/kiwix.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiwix-serve-deployment
  namespace: kiwix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiwix-serve
  template:
    metadata:
      labels:
        app: kiwix-serve
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
      - name: kiwix-serve
        image: registry.lan.ccrow.org/ghcr.io/kiwix/kiwix-serve
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: kiwix-data
          mountPath: /data
        args: ["*.zim"]
      volumes:
        - name: kiwix-data
          nfs:
            server: 10.0.2.8
            path: /volume1/Archive/kiwix
---
apiVersion: v1
kind: Service
metadata:
  name: kiwix-serve-service
  namespace: kiwix
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: kiwix-serve
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: kiwix-serve-ingress
    namespace: kiwix
    annotations:
      nginx.ingress.kubernetes.io/auth-url: |-
          http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
      nginx.ingress.kubernetes.io/auth-signin: |-
          https://kiwix.ccrow.org/outpost.goauthentik.io/start?rd=$escaped_request_uri
      nginx.ingress.kubernetes.io/auth-response-headers: |-
          Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
      nginx.ingress.kubernetes.io/auth-snippet: |
          proxy_set_header X-Forwarded-Host $http_host;

    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,73.97.37.245/32,136.226.0.0/16,104.167.184.2/32,71.212.35.212/32,174.21.143.8/32,76.146.65.221/32"
spec:
  rules:
  - host: kiwix.ccrow.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiwix-serve-service
            port:
              number: 8080
  tls:
  - hosts:
    - kiwix.ccrow.org
    secretName: kiwix-serve-tls-secret
